--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,10 +3,10 @@ apache2_port: 80
 apache2_user: www-data
 apache2_group: www-data
 
-apache2_runtime_root: "{{ runtime_root | default('/var/run') }}/nginx"
-apache2_pidfile_path: "{{ nginx_runtime_root }}/nginx.pid"
-apache2_socket_path: "{{ nginx_runtime_root }}/nginx.sock"
-apache2_log_root: "{{ log_root | default('/var/log') }}/nginx"
+apache2_runtime_root: "{{ runtime_root | default('/var/run') }}/apache2"
+apache2_pidfile_path: "{{ nginx_runtime_root }}/apache2.pid"
+apache2_socket_path: "{{ nginx_runtime_root }}/apache2.sock"
+apache2_log_root: "{{ log_root | default('/var/log') }}/apache2"
 
 apache2_docroot: /data/www/docroot
 apache2_creates_docroot: yes
