--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,8 @@ apache2_log_root: "{{ log_root | default('/var/log') }}/apache2"
 apache2_docroot: /data/www/docroot
 apache2_creates_docroot: yes
 
+apache2_configuration_name: site
+
 apache2_php_enabled: no
 php_fpm_socket_path: "{{ runtime_root | default('/var/run') }}/php/fpm.sock"
 
